feat: add dependency catalog support